# reflect-vlm

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.py
examples/: robot_pick_prediction.py  robot_scene_analysis.py  simple_robot_pick.py
llava/: __init__.py  mm_utils.py  utils.py
llava/model/: llava_arch.py
llava/serve/: cli_vqgan.py  eval.py
llava/train/: train.py  train_mem.py
roboworld/: constants.py
roboworld/agent/: diffuser.py  gemini.py  gpt.py  llava.py  oracle.py  random.py  utils.py
roboworld/agents/: gemini.py  gpt.py  llava.py  utils.py
roboworld/envs/: asset_path_utils.py  generator.py  xml_utils.py
roboworld/envs/assets/: main.xml  scene.xml  tmp.xml
roboworld/envs/assets/franka/: panda.xml  scene.xml
roboworld/envs/assets/objects/circle_hole/: circle_hole.stl
roboworld/envs/assets/objects/hexagon_prism/: hexagon_prism.stl
roboworld/envs/assets/objects/peg/: hexagon_large_short.stl  peg_hex.stl  rectangle_large_short.stl
roboworld/envs/assets/objects/pegs_and_holes/: arch_hole.stl  arch_peg.stl  circle_hole.stl  circle_peg.stl  cross_hole.stl  cross_peg.stl  flower_hole.stl  flower_peg.stl  (+22 more)
roboworld/envs/mujoco/: mujoco_env.py
roboworld/envs/mujoco/franka/: control.py  franka_assembly.py  franka_env.py
roboworld/envs/mujoco/utils/: rotation.py  transform.py  wrappers.py
roboworld/utils/: config.py  logger.py
scripts/: diffusion_demo.py  eval_base_vlm.sh  eval_expert.sh  eval_reflect_vlm.sh  interact.py  robot_pick_prediction.py  robot_scene_analysis.py  simple_robot_pick.py
(+1 files in other folders)
