[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reflectvlm"
version = "0.1.0"
description = "Reflective Planning: Vision-Language Models for Multi-Stage Long-Horizon Robotic Manipulation."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "huggingface-hub==0.21.4",
    # llava
    "torch==2.0.1", "torchvision==0.15.2",
    "transformers==4.33.3", "tokenizers==0.13.3", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.21.0", "peft==0.4.0", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
    # roboworld
    "mujoco==3.1.2", "mujoco-python-viewer", "gym==0.26.2", 
    "imageio==2.37.0", "imageio-ffmpeg==0.6.0", "moviepy==1.0.3", 
    "wandb==0.16.2", "ml_collections",
    # diffusion
    "diffusers==0.28.0"
]

[project.optional-dependencies]
train = ["deepspeed==0.12.6", "ninja"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://reflect-vlm.github.io"
"Bug Tracker" = "https://github.com/yunhaif/reflect-vlm/issues"

[tool.setuptools.packages.find]
include = ["llava*", "roboworld*"]

[tool.wheel]
include = ["llava*", "roboworld*"]
